# substrate-pow-template

./: Cargo.toml  shell.nix
node-template/: Cargo.toml
node-template/runtime/: Cargo.toml
node-template/runtime/src/: lib.rs
node-template/src/: chain_spec.rs  main.rs  pow.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: chain_spec.rs  service.rs
